# pyblazegl

./: README.md  Test.py  setup.cfg
pyblazegl/: Window.py
pyblazegl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: testWindow.py
