[metadata]
name = pyblazegl
version = 0.0.1
author = waetrmelon
description = simple graphical cross-platform development library for python. 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True